Fixed the searchbar pixel not showing up

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -231,6 +231,7 @@ input.search {
     padding-right: 10px;
     box-sizing: border-box;
     overflow-y: auto;
+    padding-left: 1px;
 }
 
 .userList .user {
